--- a/src/app/surveys/components/checkbox-question.component.html
+++ b/src/app/surveys/components/checkbox-question.component.html
@@ -2,5 +2,12 @@
   <label class="q-label" [attr.for]="question.id">{{ question.text }}</label>
   <div class="checkbox-group">
     <mat-checkbox *ngFor="let a of answers()" (change)="toggle(a.value, $event.checked)">{{ a.value }}</mat-checkbox>
+    <ng-container *ngIf="question.otherAnswer">
+      <mat-checkbox (change)="toggleOther($event.checked)">Other</mat-checkbox>
+      <mat-form-field appearance="outline" class="full">
+        <mat-label>Other</mat-label>
+        <input matInput [value]="otherValue" (input)="onOtherInput($event)" />
+      </mat-form-field>
+    </ng-container>
   </div>
 </div>
