--- a/src/app/surveys/components/select-question.component.scss
+++ b/src/app/surveys/components/select-question.component.scss
@@ -1,2 +1,4 @@
 .full { width: 100%; }
 .q-label { display:block; margin-bottom: 8px; font-weight: 600; }
+.full { width: 100%; }
+mat-form-field { width: 100%; }
